<resources>
    <string name="app_name">CTApplication</string>
    <string name="textView_lbl_IP">IP Adresa</string>
    <string name="textView_lbl_Port">Port</string>
    <string name="login">Připojit</string>
    <string name="title_activity_ct">CTActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Semafor CT</string>
    <string name="nav_header_subtitle">Ovládání semaforu</string>
    <string name="nav_header_desc">Navigace</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_monitor">Monitor</string>
    <string name="menu_weather">Počasí</string>
    <string name="menu_setting">Nastavení</string>
    <string name="menu_light">Semafor</string>
    <string name="bad_IP_Format">špatný formát IP</string>
    <string name="bad_port">Port není číslo</string>
    <string name="btn_clear">Smazat</string>
    <string name="txt_temperature_from_Arduino">Naměřená teplota z Arduina</string>
    <string name="txt_temperature_from_API">Očekávaná teplota</string>
    <string name="btn_update">Aktualizovat</string>
    <string name="textView_length_y">Doba svitu žlutá [dsec]</string>
    <string name="textView_length_g">Doba svitu zelená [dsec]</string>
    <string name="btn_set_values">Nastav</string>
    <string name="textView_sequence">Sekvence</string>
    <string name="radio_add">Přidává</string>
    <string name="radio_procedure">Postupuje</string>
    <string name="res">data</string>
    <string name="btn_go">Startuj</string>
    <string name="btn_red">Rozsviť červenou</string>
    <string name="connected">Připojeno</string>
    <string name="connect_fail">Nepovedlo se připojit</string>
    <string name="not_connected">Nepodařilo se připojit, zkontrolujte adresu a port!</string>
    <string name="lat">Šířka</string>
    <string name="lon">Délka</string>
    <string name="expected_val">10 °C</string>

    <string-array name="CT_set_sequence">
        <item>Tma</item>
        <item>Startuj</item>
        <item>Přibližuj</item>
        <item>Hned startuj</item>
        <item>Startuj R/G</item>
        <item>Ručně</item>
    </string-array>
</resources>
